fix broken margin on mobile

--- a/src/pages/bookings_components/bookings.scss
+++ b/src/pages/bookings_components/bookings.scss
@@ -100,5 +100,6 @@
     .bookings_intro {
         font-size: 0.7em;
         line-height: 1.2em;
+        margin-left: 0px;
     }
 }
